# Wordle

./: Cargo.toml  HONOR-CODE.md  custom_test.json  index.html  wordle-300164511cd9c18b.js  wordle-ab3522e8c18ee600.js  wordle-f570a58d85ad7b70.js
src/: app.rs  args.rs  config.rs  game.rs  main.rs  main.rs.exmaple.txt  state.rs  words_gen.rs
src/app/: gamemaster.rs  guesses.rs  keyboard.rs  letter.rs  metrics.rs  utils.rs
tests/cases/: 07_02_load_state.out
