[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
serde_json = "1.0"
console = "0.15"
colored = "2.1.0"
text_io = "0.1.12"
clap = { version = "4.5.8", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
getrandom = { version = "0.2.15", features = ["js"] }
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
web-sys = { version = "0.3", features = ["console"] }
chrono = { version = "0.4", features = ["serde"]}

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

# to access the DOM (to hide the loading text)
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
lazy_static = "1.4"
assert-json-diff = "2.0"
ntest = "0.9"
pretty_assertions = "1.3"
